--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -65,3 +65,9 @@ group :test do
   gem "capybara"
   gem "selenium-webdriver"
 end
+
+
+gem "bootstrap-sass"
+gem "sassc"
+gem "sassc-rails"
+gem "sprockets-rails"
